type-3/css/style.scss
@charset "UTF-8";

@use "../../shared/css/base/fonts" as *;
@use "../../shared/css/base/variable" as *;
@use "../../shared/css/base/mixin" as *;
@use "../../shared/css/base/reset" as *;
@use "../../shared/css/base/container" as *;

:root {
    --gap: 5vw;
    --maskW: 35vw;
    --slideItemW: 15vw;
    --clip: 0 0 0 100%;

    @media (max-width: 768px) {
        --gap: 8vw;
        --maskW: 60vw;
        --slideItemW: 30vw;
    }
}

@mixin background {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

@keyframes blinkAni {
    0%, 100% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
}

header {
    color: #ffffff;
}

.container {
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100vh;
    background: #000;
}

.mask {
    overflow: hidden;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: var(--maskW);
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    padding-block: 1px;

    &::before {
        content: '';
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 0;
        height: 0;
        border-radius: inherit;
        background: $slideColor;
        opacity: .5;
        transition: all .5s ease-in-out;
    }

    &.active {
        z-index: 9;
    }

    &.animate {
        &::before {
            width: 100%;
            height: 100%;
        }
    }

    &-btn {
        &:hover {
            text-decoration: underline;
        }

        position: fixed;
        top: 0;
        right: 0;
        z-index: 1000;
        padding: var(--page-padding);
        font-family: "AustinNewsDeckWeb", sans-serif;
        color: #ffffff;

        @include media(false, tablet) {
            padding: var(--page-padding) var(--page-padding) 0 0;
        }
    }

    > div { // .mask-logo, .mask-item
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 100%;
        height: 100%;
        padding: var(--page-padding);
    }

    &-cover {
        background-image: url('../images/woody.jpg');
        @include background;
    }

    &-item {
        $mask-items: 'al', 'bullseye', 'buzz-lightyear', 'emperor-zurg', 'jessie', 'mrs-potato-head', 'the-prospector', 'wheezy', 'woody';

        @each $name in $mask-items {
            &[data-mask="#{$name}"] {
                background-image: url('../images/#{$name}.jpg');
            }
        }

        @include background;

        &.active {
            --clip: 0 0 0 0;
            z-index: 1;
        }

        &.z2 {
            z-index: 2;
        }

        &.z3 {
            z-index: 3;
        }

        &::before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            z-index: -1;
            width: 100%;
            height: 100%;
            background: rgba(0, 0, 0, 0.2);
        }

        span, p {
            position: relative;
            z-index: 1;
            text-align: center;
            color: white;
        }

        span {
            font-weight: bold;
        }

        p {
            width: 66.6%;
        }
    }
}

.vic {
    overflow: hidden;
    width: 100%;

    &-wrapper {
        width: 100%;
        height: 24vw;
        overflow: hidden;

        @include media(false, mobile) {
            height: 70vw;
        }
    }

    &-slide {
        $slide-items: 'al', 'bullseye', 'buzz-lightyear', 'emperor-zurg', 'jessie', 'mrs-potato-head', 'the-prospector', 'wheezy', 'woody';
        @each $name in $slide-items {
            &[data-slide="#{$name}"] {
                background-image: url('./../images/#{$name}.jpg');
            }
        }

        display: flex;
        align-items: center;
        justify-content: center;
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: var(--slideItemW);
        aspect-ratio: 1 / 1;
        border-radius: 50%;
        @include background;
    }
}

.controls {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: to_vw(10);
    position: relative;
    z-index: 9999;

    button {
        &:hover {
            text-decoration: underline;
        }

        font-family: "AustinNewsDeckWeb", sans-serif;
        color: white;

    }
}

.pagination {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0 to_vw(16);
    position: fixed;
    top: to_vw(24);
    left: 0;
    z-index: 1;
    padding: var(--page-padding);

    button {
        position: relative;
        width: fit-content;
        padding-right: to_vw(4);
        margin-bottom: to_vw(4);
        text-align: left;
        font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
        font-size: inherit;
        color: #ffffff;

        &:hover {
            text-decoration: underline;
            color: $slideColor;
        }

        &.active {
            text-decoration: underline;
            color: $slideColor;

            &::before {
                opacity: 1;
                animation: blinkAni 1s steps(1) infinite;
            }
        }

        &::before {
            content: '❖';
            position: absolute;
            top: 1px;
            left: 100%;
            font-size: 8px;
            color: $slideColor;
            opacity: 0;
        }
    }
}

